@@ -10,15 +10,13 @@
 #define GROP_DB_H
 
 #include "config.h"
+#include "pkg.h"
 #include "porg/basepkg.h"
 #include <vector>
 #include <iosfwd>
 
 namespace Grop {
 
-
-typedef Porg::BasePkg Pkg;
-typedef Porg::File File;
 
 class DB
 {
