@@ -10,7 +10,7 @@
 #define GROP_INFOTEXTVIEW_H
 
 #include "config.h"
-#include "db.h"
+#include "pkg.h"
 #include <gtkmm/textview.h>
 
 
