@@ -1,0 +1,23 @@
+//=======================================================================
+// pkg.h
+//-----------------------------------------------------------------------
+// This file is part of the package grop
+// Copyright (C) 2014 David Ricart
+// For more information visit http://porg.sourceforge.net
+//=======================================================================
+
+#ifndef GROP_PKG_H
+#define GROP_PKG_H
+
+#include "porg/basepkg.h"
+
+namespace Grop {
+
+
+typedef Porg::BasePkg Pkg;
+typedef Porg::File File;
+
+}	// namespace Grop
+
+
+#endif  // GROP_PKG_H
