@@ -10,7 +10,7 @@
 #define GROP_REMOVE_PKG_H
 
 #include "config.h"
-#include "db.h"
+#include "pkg.h"
 #include <gtkmm/dialog.h>
 #include <gtkmm/label.h>
 #include <gtkmm/progressbar.h>
